# SirAneeq-Task2

./: README.md
litellm/: .env  README.md  main.py  pyproject.toml
open_router/: README.md  main.py  pyproject.toml
uv_packages/: README.md
uv_packages/my_project/: pyproject.toml
uv_packages/my_project/src/my_project/: __init__.py
uv_packages/src/: README.md
